css tweaked to fix reset button being too low

--- a/styles.css
+++ b/styles.css
@@ -35,5 +35,5 @@ h2 {
 #reset {
     width: 12%;
     height: 50px;
-    margin-top: 400px;
+    margin-top: 350px;
 }
